* confirmed draw pathgrid was working
* Debugged a problem where the midpoint of lines was totally wack, traced to make_arc
* Got pathfinder working. at least the easy_path portion

5/28/2014
* Visual: Added routine that trims the ends of connectors so they don't go in cells
* Visual: Made the 'curves' routine the default for now
* In conductor, moved from a conditional sceme for conections to a decaying 
    running average that is triggered by passing an assigned trigger
* Added conductor configs for conx_age, conx_avg_time, conx_avg_trigger, 
    conx_distance
* Added conductor test routines for grouped, contact, friends, coord, facing,
    and fusion
* Added record_running_avg routine
* Added get_runnning_avg routine
* Refactored and debugged update_all_connections routine
* Fixed a problem where groups were not being recorder properly in dataelements
* Adjusted the triggers and memory_times so they fired off when they should
* Fixed prob with timestamp numbers in OSC msgs by adding origtime (timestamp still
    used when aging conx)
* Fixed keyerror in conductorelements where I forgot to check if a key was in a dict first

5/30/2014
* Fixed a problem where the age never went down (because the expiration routine was
    updating the timestamp)
* (Visual) Added response to all conductor messages
* Fixed prob where conductor used timestamp rather than createtime to report age
* Refactoring: Moved all classes to their own modules

6/1/2014
* Implemented many cell attrs
* Refined conx attr algorithms and params

6/2/2014
* Added routine to scrape cells and determine which ones are abandoned
* Resolved problem of ghost cells connectors (added routine to see if 
    a cell hadn't gotten an update in a while and was abandoned)
* Resolved problem of ghost connectors (this was actually intention in
    case a cell came back to life, but really just caused probs)
* Verified and tested: conx-grouped
* Verified and tested: conx-contact
* Verified and tested: conx-friends
